[gd_scene load_steps=6 format=3 uid="uid://2lqm2475o2hu"]

[ext_resource type="Script" path="res://Scripts/Components/construction_site.gd" id="1_76nht"]
[ext_resource type="Resource" uid="uid://bkwa8glpke0ev" path="res://Data/UnitType/Builder.tres" id="2_lajy1"]
[ext_resource type="Texture2D" uid="uid://6s5jmotngpnd" path="res://Ressources/Sprite/Building/construction_site.png" id="2_p2x6w"]
[ext_resource type="Texture2D" uid="uid://c4clnxs4t11va" path="res://Ressources/Sprite/Building/construction_site_border.png" id="3_s2ero"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pr3c8"]
size = Vector2(64, 64)

[node name="ConstructionSite" type="Area2D" groups=["building", "selectable"]]
texture_filter = 1
scale = Vector2(1.3, 1.3)
script = ExtResource("1_76nht")
allowed_unit_types = Array[Resource("res://Scripts/Models/unitType.gd")]([ExtResource("2_lajy1")])

[node name="ConstructionSiteSprite" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_p2x6w")

[node name="ConstructionSiteBorder" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
position = Vector2(-2.30769, 0)
scale = Vector2(2, 2)
texture = ExtResource("3_s2ero")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
scale = Vector2(2, 2)
shape = SubResource("RectangleShape2D_pr3c8")

[node name="ConstructionSiteButtonContainer" type="HBoxContainer" parent="."]
offset_left = -34.0
offset_top = 50.0
offset_right = 34.0
offset_bottom = 83.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
